fix: print media on Firefox

--- a/packages/@vuepress/theme-default/styles/code.styl
+++ b/packages/@vuepress/theme-default/styles/code.styl
@@ -137,6 +137,7 @@ div[class~="language-php"]:before
 @media print
   {$contentClass} pre code, {$contentClass} pre[class*="language-"] code
     color #000
+    white-space pre-wrap
     page-break-inside avoid
 
   code, pre, div[class*="language-"], div[class*="language-"] .highlight-lines .highlighted
